--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "source": "src/index.html",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "npm run clean && parcel build",
+    "clean": "rm -rf dist && rm -rf .parcel-cache"
   },
   "dependencies": {},
   "devDependencies": {
