--- a/react/package.json
+++ b/react/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@hot-labs/near-connect": "^0.2.15",
+    "near-api-js": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
